--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "presto-gb",
+  "name": "erik-metronome-gb",
   "version": "1.0.0",
   "private": true,
-  "description": "presto-gb",
+  "description": "Erik's metronome in Gatsby",
   "author": "Erik de Groot",
   "keywords": [
     "gatsby"
@@ -13,7 +13,9 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src/**/*.ts src/**/*.tsx",
+    "lint:fix": "eslint src/**/*.ts src/**/*.tsx --fix"
   },
   "dependencies": {
     "gatsby": "^5.11.0",
@@ -21,9 +23,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.2.6",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
-    "typescript": "^5.1.3"
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/parser": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.5.0",
+    "babel-preset-gatsby": "^3.11.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-react": "^7.32.2",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "jest": "^29.5.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.1.3"
   }
 }
